objects/Development_Item__c/Development_Item__c.object-meta.xml
<CustomObject>
    <label>Development Item</label>
    <nameField>
        <label>Development Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Development Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>