objects/Development_Item__c/fields/Actual_Hours_Old__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_Old__c</fullName>
    <label>MiscField</label>
    <length>8</length>
    <type>Text</type>
</CustomField>