objects/Development_Item__c/fields/Actual_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hrs__c</fullName>
    <description># of Hours Numerically.</description>
    <label>Billable Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>