objects/Development_Item__c/fields/Additional_Estimate_Hrs_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Estimate_Hrs_2__c</fullName>
    <label>Additional Estimate Hrs 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>