objects/Development_Item__c/fields/Assigned_Too__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Too__c</fullName>
    <label>Assigned Too</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mani</fullName>
            </value>
            <value>
                <fullName>Steve</fullName>
            </value>
            <value>
                <fullName>Sunil</fullName>
            </value>
            <value>
                <fullName>Tama</fullName>
            </value>
            <value>
                <fullName>Vara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>