objects/Development_Item__c/fields/Basic_Steps_To_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Basic_Steps_To_Reproduce__c</fullName>
    <label>Steps To Reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>