objects/Development_Item__c/fields/Calculated_Estimated_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Estimated_Hrs__c</fullName>
    <formula>Additional_Estimate_Hrs_1__c  +  Additional_Estimate_Hrs_2__c  +  Estimated_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>