objects/Development_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin - Customer</fullName>
            </value>
            <value>
                <fullName>Admin - Production</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>New Functionality</fullName>
            </value>
            <value>
                <fullName>Package Installation link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>