objects/Development_Item__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment</description>
    <label>Comment</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>