objects/Development_Item__c/fields/Correction__c.field-meta.xml
<CustomField>
    <fullName>Correction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you want to correct your Last Week Hours value, if the value that entered previously was wrong.</description>
    <label>Correction</label>
    <type>Checkbox</type>
</CustomField>