objects/Development_Item__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Name of Client.</description>
    <label>Customer Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baptist</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
                <default>true</default>
                <label>Base</label>
            </value>
            <value>
                <fullName>BIDMC</fullName>
            </value>
            <value>
                <fullName>Brocade</fullName>
            </value>
            <value>
                <fullName>CNB</fullName>
            </value>
            <value>
                <fullName>CNE</fullName>
            </value>
            <value>
                <fullName>E!</fullName>
            </value>
            <value>
                <fullName>Entertainment Mktg</fullName>
            </value>
            <value>
                <fullName>Epson</fullName>
            </value>
            <value>
                <fullName>Fox</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>Loves</fullName>
            </value>
            <value>
                <fullName>Michigan State University</fullName>
            </value>
            <value>
                <fullName>NBC Agency LA</fullName>
            </value>
            <value>
                <fullName>NBC CC</fullName>
            </value>
            <value>
                <fullName>NBC IM</fullName>
            </value>
            <value>
                <fullName>NBC Sports</fullName>
            </value>
            <value>
                <fullName>Oxygen</fullName>
            </value>
            <value>
                <fullName>Suzanne TV</fullName>
            </value>
            <value>
                <fullName>SyFy</fullName>
            </value>
            <value>
                <fullName>Universal Theme Parks</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>