objects/Development_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>