objects/Development_Item__c/fields/Development_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Development_Item_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Dev Item #</label>
    <type>AutoNumber</type>
</CustomField>