objects/Development_Item__c/fields/Enviournment__c.field-meta.xml
<CustomField>
    <fullName>Enviournment__c</fullName>
    <label>Enviournment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>