objects/Development_Item__c/fields/Estimate_Number__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Number__c</fullName>
    <label>Estimate Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>