objects/Development_Item__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <label>MiscField2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>