objects/Development_Item__c/fields/Estimated_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hrs__c</fullName>
    <description>Amount of time the developer believes the item will take to complete.</description>
    <label>Original Estimated Hrs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>