objects/Development_Item__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Must Have</fullName>
            </value>
            <value>
                <fullName>Nice To Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>