objects/Development_Item__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Hours Required</description>
    <label>Calculated Actual Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>