objects/Development_Item__c/fields/Inv__c.field-meta.xml
<CustomField>
    <fullName>Inv__c</fullName>
    <description>A field to enter the Invoice # for the Invoice trackit bills the customer.</description>
    <label>Inv #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>