objects/Development_Item__c/fields/Item_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Item_Completion_Date__c</fullName>
    <description>Date the Dev Item was completed.</description>
    <label>Item Completion Date</label>
    <type>Date</type>
</CustomField>