objects/Development_Item__c/fields/Item_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Item_Due_Date__c</fullName>
    <description>This is the date the dev item is due.</description>
    <label>Item Due Date</label>
    <type>Date</type>
</CustomField>