objects/Development_Item__c/fields/Last_Week_Hours__c.field-meta.xml
<CustomField>
    <fullName>Last_Week_Hours__c</fullName>
    <description>This shows the number of Hours spent in last week.</description>
    <label>Last Week Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>