objects/Development_Item__c/fields/Last_worked_on_date__c.field-meta.xml
<CustomField>
    <fullName>Last_worked_on_date__c</fullName>
    <description>This will give the last date on which we have spent time on the job.</description>
    <label>Last worked on date</label>
    <type>Date</type>
</CustomField>