objects/Development_Item__c/fields/MS_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>MS_Billing_Date__c</fullName>
    <description>This is the Date MS Billed Trackit for the Hours entered on the Dev Item</description>
    <label>Developer Billing Date</label>
    <type>Date</type>
</CustomField>