objects/Development_Item__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saleforce</fullName>
                <default>true</default>
                <label>Saleforce</label>
            </value>
            <value>
                <fullName>FileMaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>