objects/Development_Item__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <length>15</length>
    <type>Text</type>
</CustomField>