objects/Development_Item__c/fields/TrackIt_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIt_Billing_Date__c</fullName>
    <description>The date TrackIt billed the customer for the work.</description>
    <label>TrackIt Billing Date</label>
    <type>Date</type>
</CustomField>