objects/Development_Item__c/fields/TrackIT_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>TrackIT_Billing_Status__c</fullName>
    <description>Used to keep track of the billing of this item by TrackIT to Clients</description>
    <label>TrackIT Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Ready to Bill</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Closed, NonBillable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>