objects/Development_Item__c/fields/Work_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Work_Performed_By__c</fullName>
    <label>Work Performed By</label>
    <type>TextArea</type>
</CustomField>