objects/Development_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Development_Item_Number__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Item_Completion_Date__c</columns>
    <columns>Release__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>TrackIT_Billing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>