objects/Development_Item__c/listViews/Ent_Mktg.listView-meta.xml
<ListView>
    <fullName>Ent_Mktg</fullName>
    <columns>Development_Item_Number__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Name__c</field>
        <operation>contains</operation>
        <value>Entertainment</value>
    </filters>
    <label>Ent Mktg</label>
    <language>en_US</language>
</ListView>