objects/Development_Item__c/listViews/Epson.listView-meta.xml
<ListView>
    <fullName>Epson</fullName>
    <columns>Development_Item_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Inv__c</columns>
    <columns>Actual_Hrs__c</columns>
    <columns>Duration__c</columns>
    <columns>TrackIT_Billing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Name__c</field>
        <operation>equals</operation>
        <value>Epson</value>
    </filters>
    <filters>
        <field>Platform__c</field>
        <operation>contains</operation>
        <value>Sale</value>
    </filters>
    <label>Epson</label>
    <language>en_US</language>
</ListView>