objects/Development_Item__c/listViews/Estimate_SF_Items.listView-meta.xml
<ListView>
    <fullName>Estimate_SF_Items</fullName>
    <columns>Priority__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Development_Item_Number__c</columns>
    <columns>NAME</columns>
    <columns>Calculated_Estimated_Hrs__c</columns>
    <columns>Estimated_Hrs__c</columns>
    <columns>Status__c</columns>
    <columns>Actual_Hrs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Estimate Needed</value>
    </filters>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>Saleforce</value>
    </filters>
    <label>Estimate SF Items</label>
    <language>en_US</language>
</ListView>