objects/Development_Item__c/listViews/Items_Due_this_Week.listView-meta.xml
<ListView>
    <fullName>Items_Due_this_Week</fullName>
    <columns>Development_Item_Number__c</columns>
    <columns>Priority__c</columns>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Item_Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Item_Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Items Due this Week</label>
    <language>en_US</language>
</ListView>