objects/Development_Item__c/listViews/Ready_for_New_Package.listView-meta.xml
<ListView>
    <fullName>Ready_for_New_Package</fullName>
    <columns>NAME</columns>
    <columns>Development_Item_Number__c</columns>
    <columns>Release__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for Package</value>
    </filters>
    <label>Ready for New Package</label>
    <language>en_US</language>
</ListView>